# race_simulator

./: CMakeLists.txt  main.cpp  main.h
race_classes/: Air_race.cpp  Air_race.h  Default_race.cpp  Default_race.h  Ground_race.cpp  Ground_race.h  Mixed_race.cpp  Mixed_race.h  Race.h
transport_classes/: Air_transport.cpp  Air_transport.h  Air_trasport.cpp  Air_trasport.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  Camel_fast.cpp  Camel_fast.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  Ground_transport.cpp  Ground_transport.h  Rug_plain.cpp  Rug_plain.h  Shoes_everygoes.cpp  Shoes_everygoes.h  Transport.h
